<resources>
    <string name="app_name">MadProject</string>
    <string name="twitter_key">aQ05c6bsu3cUgz2oVdf0UTjFq</string>
    <string name="twitter_secret_key">7xrNyqO3TLuaShgMfTBcFBwJfeuEBMdegx4oizM21oox4F7aEn</string>
    <string name="parse_app_id">VQkjcPKUPzUNBjZOFP3OP9MolVCHPDzWODGzbYDS</string>
    <string name="parse_client_key">MqNE7TiiOFlvt5prd93FOVh5jX1nqJg86HlAI58Z</string>

    <string name="title_activity_facebook">FacebookActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="loginBtn">Login</string>
    <string name="newAccBtn">Create New Account</string>
    <string name="signUpBtn">Sign up</string>
    <string name="CancelBtn">Cancel</string>
    <string name="editprofile">Edit Profile</string>
    <string name="userlist">View UserList</string>
    <string name="logout">Logout</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="save">Save</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_profile_display">ProfileDisplayActivity</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="gender">Gender:</string>
    <string name="email">Email:</string>
    <string name="photoLabel">Profile Photo:</string>
    <string name="facebook_app_id">1221561451188092</string>
    <string name="compose">Compose:</string>
    <string name="sendBtn">Send</string>
    <string name="composemessage">Compose a message</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="inbox">Go to Inbox</string>
    <string name="inboxMsg">Inbox</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="composeBtn">Compose message</string>
    <string name="senderLabel">Sender:</string>
    <string name="title_activity_message_display">MessageDisplayActivity</string>
    <string name="senderLabelDisplay">Sender:</string>
    <string name="timePost">Time Posted:</string>
    <string name="MsgContDisplay">Message:</string>
    <string name="ReplyBtn">Reply</string>
    <string name="title_activity_compose2">ComposeActivity2</string>
    <string name="composeMsg">Compose a message</string>
    <string name="imageLabel">Image:</string>
    <string name="genderLabel">Gender:</string>
    <string name="emailLabel">Email:</string>
    <string name="pushnoti">PushNote</string>
    <string name="privacysetting">PrivacySettings</string>
    <string name="title_activity_privacy">PrivacyActivity</string>
    <string name="profileLabel">Profile Listing set as :</string>
    <string name="profileTrueBtn">True</string>
    <string name="profielFalseBtn">False</string>
    <string name="pushNoteLabel">Push Notifications set as :</string>
    <string name="pushNoteBtn">True</string>
    <string name="pushFalseBtn">False</string>
    <string name="albumSecurity">Album Security set as :</string>
    <string name="albumTrueBtn">True</string>
    <string name="albumFalseBtn">False</string>
    <string name="messageprivacy">Receive Messages set as :</string>
    <string name="title_activity_facebooklogin">Facebooklogin</string>
    <string name="genderFb">Gender :</string>
    <string name="PhotoFb">Profile Photo :</string>
    <string name="submitFbBtn">Submit</string>
    <string name="fblogin">Login Via Facebook</string>
    <string name="selectphotosignup">Select Photo :</string>
    <string name="usernamelabel">User Name :</string>
    <string name="twitterlogin">Login Via Twitter</string>
    <string name="emailFb">Email :</string>
    <string name="title_activity_twitterlogin">Twitterlogin</string>
    <string name="emailtwit">Email :</string>
    <string name="gendertwit">Gender :</string>
    <string name="twitphoto">Profile Photo :</string>
    <string name="twitsubmit">Submit</string>
    <string name="editprofileBtn">Edit your profile</string>
    <string name="viewuserlistBtn">view user list</string>
    <string name="privacyBtn">Privacy Settings</string>
    <string name="homepage">Home Page</string>
    <string name="changephotoedit">Change Profile Photo :</string>
    <string name="editpagetitle">Edit your details :</string>

    <string name="password_hint">Password</string>
    <string name="name_hint">First Name</string>
    <string name="facebook_login_label">Login Using Facebook</string>
    <string name="twitter_login_label">Login Using Twitter</string>
    <string name="title_activity_album">Album</string>
    <string name="new_album_button">New Album</string>
    <string name="title_activity_new_album">New Album</string>
    <string name="addPictureButton">Add Picture</string>
    <string name="completeAlbumButton">Complete Album</string>
    <string name="album_label">Enter Album Name</string>
    <string name="private_cb_label">Private</string>
    <string name="title_activity_album_display">Album Display</string>
    <string name="add_photo_label">Add Photo</string>
    <string name="delete_album_label">Delete Album</string>
    <string name="update_label">Update</string>
    <string name="share_album_label">Share</string>
    <string name="empty_album_label">This Album is empty</string>
    <string name="title_activity_share">Share</string>
    <string name="share_album_title">Select Users to Share Album With</string>
</resources>
