<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arjun.madproject.MessageDisplayActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/senderLabelDisplay"
        android:id="@+id/senderLabelDisplay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/senderNameMsgDisplay"
        android:layout_above="@+id/timePost"
        android:layout_toRightOf="@+id/timePost"
        android:layout_toEndOf="@+id/timePost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timePost"
        android:id="@+id/timePost"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/senderLabelDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/timeMsgDisplayVal"
        android:layout_alignTop="@+id/timePost"
        android:layout_alignLeft="@+id/senderNameMsgDisplay"
        android:layout_alignStart="@+id/senderNameMsgDisplay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MsgContDisplay"
        android:id="@+id/MsgContDisplay"
        android:layout_below="@+id/timePost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/MSgDisplayVal"
        android:layout_alignTop="@+id/MsgContDisplay"
        android:layout_alignLeft="@+id/timeMsgDisplayVal"
        android:layout_alignStart="@+id/timeMsgDisplayVal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ReplyBtn"
        android:id="@+id/ReplyBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/composeMsg"
        android:visibility="invisible"
        android:id="@+id/composeDisplayBtn"
        android:layout_above="@+id/ReplyBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:id="@+id/imgDisplay"
        android:layout_above="@+id/ReplyBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/imageLabel"
        android:id="@+id/imageLabel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
