<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.arjun.madproject.NewAlbumActivity">

    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="@dimen/single_picture_size"
        android:padding="0dp"
        android:id="@+id/pictureGrid"
        android:numColumns="auto_fit"
        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:scrollingCache="true"
        android:smoothScrollbar="true"
        android:alwaysDrawnWithCache="true"
        android:stretchMode="columnWidth"
        android:layout_above="@+id/albumName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/privacyCheckBox"
        android:layout_toStartOf="@+id/privacyCheckBox"
        android:id="@+id/albumName"
        android:hint="@string/album_label"
        android:layout_above="@+id/addPictureButton"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_cb_label"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/privacyCheckBox"
        android:layout_above="@+id/addPictureButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addPictureButton"
        android:id="@+id/addPictureButton"
        android:onClick="addPictureToAlbum"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/centerShim"
        android:layout_toStartOf="@id/centerShim"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/centerShim"
        android:layout_toEndOf="@id/centerShim"
        android:onClick="createAlbum"
        android:text="@string/completeAlbumButton"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
