<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arjun.madproject.Facebooklogin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/genderFb"
        android:id="@+id/genderFb"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/genderFbVal"
        android:layout_alignBottom="@+id/genderFb"
        android:layout_toRightOf="@+id/genderFb"
        android:layout_toEndOf="@+id/genderFb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PhotoFb"
        android:id="@+id/PhotoFb"
        android:layout_below="@+id/genderFb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:id="@+id/FbphotoimageView"
        android:layout_below="@+id/PhotoFb"
        android:src="@drawable/avatar_blank"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitFbBtn"
        android:id="@+id/submitfbBtn"
        android:layout_below="@+id/FbphotoimageView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
